--- a/src/IdentityService/Pages/Index.cshtml
+++ b/src/IdentityService/Pages/Index.cshtml
@@ -3,8 +3,8 @@
 
 <div class="welcome-page">
     <h1>
-        <img src="~/duende-logo.svg" class="logo">
-        Welcome to Duende IdentityServer
+        <img src="~/auction.png" class="logo">
+        Welcome to Auction Identity Server
         <small class="text-muted">(version @Model.Version)</small>
     </h1>
 
@@ -25,11 +25,6 @@
         </li>
         <li>
             Click <a href="~/ciba/all">here</a> to view your pending CIBA login requests.
-        </li>
-        <li>
-            Here are links to the
-            <a href="https://github.com/duendesoftware/IdentityServer">source code repository</a>,
-            and <a href="https://github.com/duendesoftware/samples">ready to use samples</a>.
         </li>
     </ul>
 
