--- a/src/IdentityService/wwwroot/css/login.css
+++ b/src/IdentityService/wwwroot/css/login.css
@@ -1,4 +1,3 @@
-/* Đảm bảo bố cục tổng thể */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -8,7 +7,6 @@ body {
     margin: 0;
 }
 
-/* Phần nội dung chính (căn giữa form) */
 .login-page {
     flex: 1;
     display: flex;
@@ -18,7 +16,6 @@ body {
     padding: 10px;
 }
 
-/* Container của form */
 .box {
     background-color: #fff;
     padding: 30px;
@@ -30,7 +27,6 @@ body {
     text-align: center;
 }
 
-/* Tiêu đề "SIGN IN" */
 .box h2 {
     font-size: 1.5rem;
     font-weight: bold;
@@ -39,14 +35,12 @@ body {
     text-transform: uppercase;
 }
 
-/* Form */
 .box form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-/* Ô input (Username và Password) */
 .box .form-group {
     margin-bottom: 15px;
     width: 100%;
@@ -56,6 +50,7 @@ body {
 .box .form-group label {
     display: block;
     color: #555;
+    font-weight: bold;
     margin-bottom: 5px;
     text-transform: capitalize;
 }
@@ -69,7 +64,6 @@ body {
     outline: none;
 }
 
-/* Checkbox "Remember Me" */
 .box .checkbox-group {
     display: flex;
     margin-bottom: 20px;
@@ -82,7 +76,6 @@ body {
     height: 20px;
 }
 
-/* Nút Sign In và Sign Up */
 .box .button-group {
     display: flex;
     justify-content: space-between;
@@ -120,7 +113,6 @@ body {
     text-transform: capitalize;
 }
 
-/* Nút Home */
 .box a img {
     width: 30px;
     height: 30px;
