--- a/src/IdentityService/Pages/Account/Register/Index.cshtml
+++ b/src/IdentityService/Pages/Account/Register/Index.cshtml
@@ -1,57 +1,67 @@
 @page
 @model IdentityService.Pages.Register.Index
 
-<div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SIGN UP</title>
+    <link rel="stylesheet" href="~/css/register.css">
+</head>
+<body>
     <partial name="_ValidationSummary" />
 
     <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header text-center">
-                    <h2>Register</h2>
-                </div>
-                <div class="card-body">
-                    <form asp-page="/Account/Register/Index">
-                        <input type="hidden" asp-for="Input.ReturnUrl" />
+        <div class="register-page">
+            <div class="box">
+                <h2>SIGN UP</h2>
+                <form asp-page="/Account/Register/Index">
+                    <input type="hidden" asp-for="Input.ReturnUrl" />
 
-                        <div class="form-group">
-                            <label asp-for="Input.FullName"></label>
-                            <input class="form-control" placeholder="FullName" asp-for="Input.FullName" autofocus>
-                        </div>
-                        
-                        <div class="form-group">
-                            <label asp-for="Input.UserName"></label>
-                            <input class="form-control" placeholder="UserName" asp-for="Input.UserName">
-                        </div>
+                    <div class="form-group">
+                        <label asp-for="Input.FullName"></label>
+                        <input type="text" placeholder="Fullname" asp-for="Input.FullName" autofocus>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input type="email" placeholder="Email" asp-for="Input.Email" >
+                    </div>
+                    
+                    <div class="form-group">
+                        <label asp-for="Input.UserName"></label>
+                        <input type="text" placeholder="Username" asp-for="Input.UserName">
+                    </div>
 
-                        <div class="form-group">
-                            <label asp-for="Input.PassWord"></label>
-                            <input type="password" class="form-control" placeholder="PassWord" asp-for="Input.PassWord" autocomplete="off">
-                        </div>
-                        
-                        <div class="form-group">
-                            <label asp-for="Input.Email"></label>
-                            <input class="form-control" placeholder="Email" asp-for="Input.Email" >
-                        </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Telephone"></label>
+                        <input type="number" placeholder="Telephone" asp-for="Input.Telephone" >
+                    </div>
 
-                        <div class="form-group">
-                            <label asp-for="Input.Telephone"></label>
-                            <input class="form-control" placeholder="Telephone" asp-for="Input.Telephone" >
-                        </div>
+                    <div class="form-group">
+                        <label asp-for="Input.PassWord"></label>
+                        <input type="password" placeholder="Password" asp-for="Input.PassWord" autocomplete="off">
+                    </div>
 
-                        <div class="form-group">
-                            <label asp-for="Input.Address"></label>
-                            <input class="form-control" placeholder="Address" asp-for="Input.Address" >
-                        </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Address"></label>
+                        <input type="text"  placeholder="Address" asp-for="Input.Address" >
+                    </div>
 
-                        <a class="pb-2 d-block" asp-page="../Login/Index" asp-route-returnUrl="@Model.Input.ReturnUrl">
-                            Already Registered? Login
-                        </a>
-                        
-                        <button class="btn btn-primary" name="Input.Button" value="register">Register</button>
-                        <button class="btn btn-secondary" name="Input.Button" value="cancel">Cancel</button>
-                    </form>
-                </div>
+                    @* <a class="pb-2 d-block" asp-page="../Login/Index" asp-route-returnUrl="@Model.Input.ReturnUrl">
+                        Already Registered? Login
+                    </a> *@
+
+                    <div class="button-group">
+                        <button class="signup-btn" type="submit" name="Input.Button" value="SignUp">Sign Up</button>
+                        <button class="signin-btn" type="button" name="Input.Button" value="SignIn">
+                            <a asp-page="../Login/Index" asp-route-returnUrl="@Model.Input.ReturnUrl">Sign In</a> 
+                        </button>
+                    </div>  
+
+                    <a href="http://localhost:5000/"><img src="~/home.png"></a> 
+                </form>
 
                 @if(Model.RegisterSuccess)
                 {
@@ -62,4 +72,4 @@
             </div>
         </div>
     </div>
-</div>
+</body>
