--- a/src/IdentityService/Pages/Shared/_Nav.cshtml
+++ b/src/IdentityService/Pages/Shared/_Nav.cshtml
@@ -9,11 +9,9 @@
 }
 
 <div class="nav-page">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-        <a href="~/" class="navbar-brand">
-            <img src="~/favicon.ico" class="icon-banner">
-            E-SHOP
+    <nav class="navbar navbar-expand-lg bg-white border-bottom shadow-sm p-3">
+        <a href="http://app.nguyenth4nh.xyz" class="navbar-brand text-danger">
+            <strong>E-Shop</strong>
         </a>
 
         @if (!string.IsNullOrWhiteSpace(name))
@@ -28,6 +26,5 @@
                 </li>
             </ul>
         }
-
     </nav>
 </div>
