--- a/src/IdentityService/Pages/Account/Login/Index.cshtml
+++ b/src/IdentityService/Pages/Account/Login/Index.cshtml
@@ -15,7 +15,7 @@
             <div class="login-page">
                 <div class="box">
                     <h2>Đăng Nhập</h2>
-                    <form asp-page="~/Account/Login/Index">
+                    <form asp-page="/Account/Login/Index">
                         <input type="hidden" asp-for="Input.ReturnUrl" />
 
                         <div class="form-group">
@@ -50,12 +50,33 @@
                         </button>
 
                         @* Link chuyển đến trang đăng ký *@
-                        <a class="mt-3 text-decoration:none text-primary" asp-page="../Register/Index"
+                        <a class="mt-3 text-decoration:none text-primary mt-3" asp-page="/Account/Register/Index"
                             asp-route-returnUrl="@Model.Input.ReturnUrl">
                             Đăng ký ngay
                         </a>
-
                     </form>
+
+                    @* Đăng nhập với Google *@
+                    @if (Model.View.VisibleExternalProviders.Any())
+                    {
+                        @foreach (var provider in Model.View.VisibleExternalProviders)
+                        {
+                            <form method="post" asp-page="/ExternalLogin/Challenge"
+                                asp-route-scheme="@provider.AuthenticationScheme" asp-route-returnUrl="@Model.Input.ReturnUrl">
+                                <button type="submit" class="btn btn-primary text-white rounded-pill px-3 py-2 mt-3">
+                                    Đăng nhập với @provider.DisplayName
+                                </button>
+                            </form>
+                            @* <button class="btn btn-primary text-white rounded-pill px-3 py-2"
+                                    type="submit"
+                                    asp-page="/ExternalLogin/Challenge"
+                                    asp-route-scheme="@provider.AuthenticationScheme"
+                                    asp-route-returnUrl="@Model.Input.ReturnUrl">
+                                    Đăng nhập với @provider.DisplayName
+                            </button> *@
+                        }
+                    }
+
                 </div>
             </div>
         }
